--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "primeravance",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,10 @@
   "dependencies": {
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.19.3",
+    "@jest/globals": "^29.1.2",
+    "jest": "^29.1.2"
   }
 }
