--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node ./src/models/index.js"
+    "dev": "node ./src/models/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
