--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "type": "module",
   "scripts": {
     "dev": "node ./src/models/index.js",
-    "start": "node ./src/index.js",
+    "start": "node ./src/main.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.24.0"
   },
