--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-export default () => {
     HOST: 'localhost';
     USER: 'root';
     PASSWORD: 'root';
     DATABASE: 'products';
-}
+    DIALECT:'mysql
