--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "node ./src/models/index.js",
-    "start": "node ./src/main.js",
+    "start": "nodemon ./src/main.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.24.0"
   },
   "devDependencies": {
