--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node ./src/models/index.js",
     "start": "nodemon ./src/main.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.3",
     "@jest/globals": "^29.1.2",
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "uuid": "^9.0.0"
   }
 }
