--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "node ./src/models/index.js",
-    "start": "nodemon ./src/main.js",
-    "test": "jest --detectOpenHandles"
+    "start": "nodemon ./src/server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.19.3",
     "@jest/globals": "^29.1.2",
     "jest": "^29.1.2",
+    "supertest": "^6.3.0",
     "uuid": "^9.0.0"
   }
 }
