Feature/FS-26 #comment Product Controller was created and Rroduct Repository was added to Product Controller

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE = "foodstore"
 HOST = "localhost"
 USER = "root"
-PASSWORD = "root"
+PASSWORD = "1234"
 DIALECT = "mysql"
 SECRETKEY= "2f777bf4-7d9d-4dbe-9590-f632ff2461f2"
 
